<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient_gray"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout style="@style/table_cell_header">

                <LinearLayout style="@style/table_cell_text_header">

                    <ImageView
                        android:id="@+id/imgFavorite"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:visibility="gone"/>

                    <TextView
                        style="@style/table_cell_text_header_inner"
                        android:tag="tag_cointitle"
                        android:text="BTC" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="right">

                    <Button
                        android:id="@+id/btnFavoriteRemove"
                        android:onClick="btnFavoriteRemoveOnClick"
                        style="@style/btn_style_red"
                        android:text="@string/btnRemoveFavorite"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/btnFavoriteAdd"
                        android:onClick="btnFavoriteAddOnClick"
                        style="@style/btn_style_yellow"
                        android:text="@string/btnAddFavorite" />

                    <Button
                        android:id="@+id/btnAlarm"
                        android:onClick="btnAlarmOnClick"
                        style="@style/btn_style_green"
                        android:text="@string/btnAddAlarm" />
                </LinearLayout>

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView android:text="@string/txtRowBuy" style="@style/table_cell_caption" />
            <TextView android:tag="buy" android:text="0.000" style="@style/table_cell_text"/>

            <TextView android:text="@string/txtRowAsk" style="@style/table_cell_caption" />
            <TextView android:tag="ask" android:text="0.000" style="@style/table_cell_text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView android:text="@string/txtRowLow" style="@style/table_cell_caption" />
            <TextView android:tag="low" android:text="0.000" style="@style/table_cell_text"/>

            <TextView android:text="@string/txtRowHigh" style="@style/table_cell_caption" />
            <TextView android:tag="high" android:text="0.000" style="@style/table_cell_text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView android:text="@string/txtRowLastOrder" style="@style/table_cell_caption" />
            <TextView android:tag="lastOrder" android:text="0.000" style="@style/table_cell_text"/>

            <TextView android:text="@string/txtRowAvg" style="@style/table_cell_caption" />
            <TextView android:tag="avg" android:text="0.000" style="@style/table_cell_text"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:text="@string/txtRowVolume" style="@style/table_cell_caption"/>
            <TextView android:tag="volume" android:text="0.000" style="@style/table_cell_text"/>

            <TextView android:text="@string/txtRowChange" style="@style/table_cell_caption" />
            <TextView android:tag="changeRate" android:text="0.000" style="@style/table_cell_text"/>
        </TableRow>

    </LinearLayout>

</LinearLayout>