<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".AlarmSettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewCoin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adUnitId="@string/add_unitId_alarm_detail">
        </com.google.android.gms.ads.AdView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <include android:id="@+id/detailRow"
                layout="@layout/data_table_row_alarm_detail"/>
        </LinearLayout>
        
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            android:background="?attr/colorPrimary">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="tabItemLastOrder"
                android:id="@+id/tabItemLastOrder"
                android:text="@string/tabTextLastOrder"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="tabItemBuy"
                android:id="@+id/tabItemBuy"
                android:text="@string/tabTextBuy"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="tabItemAsk"
                android:id="@+id/tabItemAsk"
                android:text="@string/tabTextAsk"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="tabItemHighLow"
                android:id="@+id/tabItemHighLow"
                android:text="@string/tabTextHighLow"/>
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <FrameLayout
            android:id="@+id/frameLayoutAlarmDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"

        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="55dp"
        app:backgroundTint="#ffc107"
        app:fabSize="mini"
        android:src="@drawable/icon_add_alarm_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>